--- a/_posts/2013-12-25-norma-x1.markdown
+++ b/_posts/2013-12-25-norma-x1.markdown
@@ -3,23 +3,9 @@ layout: post
 title:  "An X-Ray Study of Black Hole Candidate X Norma X-1"
 date:   2013-12-25 17:34:22
 categories: projects high-energy-astrophysics data-analysis
-weight: 100
+weight: 105
 ---
 
-You'll find this post in your `_posts` directory - edit this post and re-build (or run with the `-w` switch) to see your changes!
-To add new posts, simply add a file in the `_posts` directory that follows the convention: YYYY-MM-DD-name-of-post.ext.
-
-Jekyll also offers powerful support for code snippets:
-
-{% highlight ruby %}
-def print_hi(name)
-  puts "Hi, #{name}"
-end
-print_hi('Tom')
-#=> prints 'Hi, Tom' to STDOUT.
-{% endhighlight %}
-
-Check out the [Jekyll docs][jekyll] for more info on how to get the most out of Jekyll. File all bugs/feature requests at [Jekyll's GitHub repo][jekyll-gh].
-
-[jekyll-gh]: https://github.com/jekyll/jekyll
-[jekyll]:    http://jekyllrb.com
+<a></a>
+<p>We analyze spectral data from the Low-Mass X-Ray Binary 4U 1630-47 (X Nor X-1). This is a black hole candidate located at $\alpha = 16^\circ 34' 01.61” , δ = −47^\circ 23' 34.8” $. We analyze data for the period between MJD 53829.3638299 and MJD 53950.93011. This period corresponds to an outburst in the source between 2005-12-24, 10:45:54.7 and 2006-04-23, 22:19:21.5 hrs. The data is taken from the RXTE GOF archives. We extract the $3-30 \ keV$ spectra from the binned mode Standard 2 Data which has a time resolution of $16s$. We then fit the spectra obtained with a theoretical model which in addition to the main radiation mechanism takes into account, interstellar extinction along the line of sight. The model for the main radiation mechanism consists of thermal emission from a geometrically thin and optically thick disk, and non-thermal radiation modeled by a power-law, presumably from the high energy Comptonizing cloud located inside the truncated disk, as well as reection of the Compton radiation from the disk. We obtain best fit values of various parameters like the internal radius of the accretion disk, the internal temperature, flux in various bandpasses, relative magnitudes of the non-thermal Compton component and the thermal blackbody component. We provide the plots of various parameters ton understand the underlying physical mechanism giving rise to emission during this outburst phase. </p>
+<p>The full report can be downloaded <a href="/media/4U_1630-47_Report.pdf">here</a>.</p>
